syntax = "proto3";

package book; // 声明的是protobuf的包, 建议用当前目录的名字

option go_package = "demo/proto/book"; // 声明的是go的包

message Price {
  int64 market_price = 1;
  int64 sale_price = 2;
}
